Fix : Horizontal scroll on -320px

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -24,9 +24,9 @@ footer a:hover *{
 }
 
 footer div{
-    width: 100%;
     max-width: var(--max-width);
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 12px 16px;
     margin: auto;
